[package]
name = "apvm"
version = "0.1.0"
edition = "2021"
description = "Atlaspack Bundler Version Manager"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"]  }
anyhow = { workspace = true }
homedir = { workspace = true }
tar = { workspace = true }
xz = { workspace = true }
pathdiff = { workspace = true }
which = { workspace = true }
